--- a/assets/product-gallery-zoom.css
+++ b/assets/product-gallery-zoom.css
@@ -1,19 +1,23 @@
-<style>
-    figure.zoom {
-      background-position: 50% 50%;
-      position: relative;
-      /* margin: 150px auto; */
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      cursor: zoom-in;
-    }
-    figure.zoom img:hover {
-      opacity: 0;
-    }
-    figure.zoom img {
-      transition: opacity 0.5s;
-      display: block;
-      width: 100%;
-    }
-  </style>
+ figure.zoom {
+    background-position: 50% 50%;
+    position: relative;
+    /* margin: 150px auto; */
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    cursor: zoom-in;
+  }
+  figure.zoom img:hover {
+    opacity: 0;
+  }
+  figure.zoom img {
+    transition: opacity 0.5s;
+    display: block;
+    width: 100%;
+  }
+
+@media screen and (max-width: 991px) {
+  figure.zoom {
+    pointer-events: none;
+  }
+}
